--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "manta-client": "^1.0.5",
     "once": "~1.3.0",
-    "ssh2": "~0.2.18"
+    "ssh2": "~0.2.18",
+    "tmp": "0.0.23"
   },
   "devDependencies": {
     "mkdirp": "~0.3.5",
