--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "dependencies": {
     "manta-client": "^1.0.5",
-    "once": "~1.3.0",
-    "ssh2": "~0.2.18",
-    "tmp": "0.0.23"
+    "once": "~1.3.1",
+    "ssh2": "~0.3.6",
+    "tmp": "~0.0.24"
   },
   "devDependencies": {
-    "mkdirp": "~0.3.5",
+    "mkdirp": "~0.5.0",
     "rimraf": "~2.2.6",
-    "tap": "~0.4.8"
+    "tap": "~0.4.13"
   },
   "scripts": {
     "test": "tap test/*.js"
