--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "tmp": "~0.0.24"
   },
   "devDependencies": {
+    "jshint": "~2.5.11",
+    "lab": "~5.2.0",
     "mkdirp": "~0.5.0",
+    "must": "~0.12.0",
     "rimraf": "~2.2.6",
     "tap": "~0.4.13"
   },
@@ -38,7 +41,8 @@
     "url": "git://github.com/npm/multi-fs"
   },
   "scripts": {
-    "test": "tap test/*.js",
-    "lint": "jshint multi-fs.js lib/*.js"
+    "test": "lab -v -c --timeout 10000 test/test-*",
+    "test-old": "tap test/*.js",
+    "lint": "jshint multi-fs.js lib/*.js test/*.js"
   }
 }
