--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mkdirp": "~0.5.0",
     "must": "~0.12.0",
     "rimraf": "~2.2.6",
+    "sinon": "~1.12.2",
     "tap": "~0.4.13"
   },
   "directories": {
