Sha1 sum implementation & test for everything except the manta client.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "git://github.com/npm/multi-fs"
   },
   "scripts": {
-    "test": "lab -v -c --timeout 10000 test/test-*",
+    "test": "lab -v -c --timeout 10000 test-new/test-*",
     "test-old": "tap test/*.js",
     "lint": "jshint multi-fs.js lib/*.js test/*.js"
   }
