--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "mkdirp": "~0.5.0",
     "rimraf": "~2.2.6",
-    "tap": "~0.4.13"
+    "tap": "^1.2.0"
   },
   "directories": {
     "test": "test"
