--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "C J Silverio <ceejceej@gmail.com>"
   ],
   "dependencies": {
-    "manta-client": "^1.0.5",
-    "once": "~1.3.1",
+    "once": "~1.4.0",
     "ssh2": "~0.3.6",
     "tmp": "~0.0.24"
   },
   "devDependencies": {
-    "mkdirp": "~0.5.0",
-    "rimraf": "~2.2.6",
-    "tap": "^1.2.0"
+    "mkdirp": "~0.5.1",
+    "rimraf": "~2.6.1",
+    "tap": "~10.3.2"
   },
   "directories": {
     "test": "test"
@@ -28,8 +27,7 @@
     "fs",
     "redundancy",
     "ssh",
-    "scp",
-    "manta"
+    "scp"
   ],
   "license": "ISC",
   "main": "multi-fs.js",
